@@ -18,7 +18,8 @@ plugins {
 
     // id("dev.jbang") version "0.2.0"
     // Workaround for https://github.com/jbangdev/jbang-gradle-plugin/issues/7
-    id("com.github.koppor.jbang-gradle-plugin") version "fix-7-SNAPSHOT"
+    // Build state at https://jitpack.io/#koppor/jbang-gradle-plugin/fix-7-SNAPSHOT
+    id("com.github.koppor.jbang-gradle-plugin") version "8a85836163"
 }
 
 var version: String = project.findProperty("projVersion")?.toString() ?: "0.1.0"
@@ -42,13 +43,14 @@ tasks.withType<com.autonomousapps.tasks.CodeSourceExploderTask>().configureEach 
     dependsOn(tasks.withType<AntlrTask>())
 }
 
+// See https://javadoc.io/doc/org.mockito/mockito-core/latest/org.mockito/org/mockito/Mockito.html#0.3
+val mockitoAgent = configurations.create("mockitoAgent")
+
 dependencies {
+    // api(platform(project(":versions")))
+
     implementation("org.openjfx:javafx-base")
 
-    // Required by afterburner.fx
-    implementation("org.openjfx:javafx-controls")
-    implementation("org.openjfx:javafx-fxml")
-    implementation("org.openjfx:javafx-graphics")
     implementation("com.ibm.icu:icu4j")
 
     // Fix "error: module not found: javafx.controls" during compilation
@@ -58,6 +60,9 @@ dependencies {
     // exclusions are not supported
 
     implementation("org.jabref:afterburner.fx")
+    // Required by afterburner.fx
+    implementation("org.openjfx:javafx-fxml")
+
     implementation("org.jabref:easybind")
 
     implementation ("org.apache.pdfbox:pdfbox")
@@ -96,6 +101,8 @@ dependencies {
 
     implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml")
     implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
+    // TODO: Somwewhere we get a warning: unknown enum constant Id.CLASS reason: class file for com.fasterxml.jackson.annotation.JsonTypeInfo$Id not found
+    // implementation("com.fasterxml.jackson.core:jackson-annotations:2.19.1")
 
     implementation("com.fasterxml:aalto-xml")
 
@@ -193,16 +200,24 @@ dependencies {
     testImplementation("org.junit.platform:junit-platform-launcher")
 
     testImplementation("org.mockito:mockito-core")
+    // TODO: Use versions of versions/build.gradle.kts
+    mockitoAgent("org.mockito:mockito-core:5.18.0") { isTransitive = false }
     testImplementation("net.bytebuddy:byte-buddy")
 
     testImplementation("org.xmlunit:xmlunit-core")
     testImplementation("org.xmlunit:xmlunit-matchers")
-    testRuntimeOnly("com.tngtech.archunit:archunit-junit5-engine")
+    testImplementation("org.junit.jupiter:junit-jupiter-api")
+
+    testImplementation("com.tngtech.archunit:archunit")
     testImplementation("com.tngtech.archunit:archunit-junit5-api")
+    testRuntimeOnly("com.tngtech.archunit:archunit-junit5-engine")
 
-    testImplementation("org.hamcrest:hamcrest-library")
+    testImplementation("org.hamcrest:hamcrest")
 
-    testImplementation("org.wiremock:wiremock")
+    testImplementation("org.wiremock:wiremock") {
+        exclude(group = "net.sf.jopt-simple", module = "jopt-simple")
+    }
+    testImplementation("org.ow2.asm:asm")
 
     // Required for LocalizationConsistencyTest
     testImplementation("org.testfx:testfx-core")
@@ -403,6 +418,11 @@ tasks.test {
     useJUnitPlatform {
         excludeTags("DatabaseTest", "FetcherTest")
     }
+    jvmArgs = listOf(
+        "-javaagent:${mockitoAgent.asPath}",
+        "--add-opens", "java.base/jdk.internal.ref=org.apache.pdfbox.io",
+        "--add-opens", "java.base/java.nio=org.apache.pdfbox.io"
+    )
 }
 
 jmh {
@@ -520,8 +540,13 @@ tasks.named<Jar>("sourcesJar") {
     )
 }
 
-tasks.withType<GenerateModuleMetadata> {
-    suppressedValidationErrors.add("enforced-platform")
+
+// Include the BOM in the generated POM ("inline" / "inlining")
+// Source: https://github.com/gradle/gradle/issues/10861#issuecomment-3027387345
+publishing.publications.withType<MavenPublication>().configureEach {
+    versionMapping {
+        allVariants { fromResolutionResult() }
+    }
 }
 
 javaModuleTesting.whitebox(testing.suites["test"]) {
@@ -529,11 +554,18 @@ javaModuleTesting.whitebox(testing.suites["test"]) {
     requires.add("org.junit.jupiter.api")
     requires.add("org.junit.jupiter.params")
     requires.add("org.jabref.testsupport")
+    requires.add("org.hamcrest")
     requires.add("org.mockito")
+
+    // Required for LocalizationConsistencyTest
+    requires.add("org.testfx.junit5")
+    // requires.add("org.assertj.core")
+
+    requires.add("org.xmlunit")
+    requires.add("org.xmlunit.matchers")
     requires.add("wiremock")
     requires.add("wiremock.slf4j.spi.shim")
 
-    // --add-reads
-    //reads.add("org.jabref.jablib=io.github.classgraph")
-    //reads.add("org.jabref.jablib=org.jabref.testsupport")
+    requires.add("com.tngtech.archunit")
+    requires.add("com.tngtech.archunit.junit5.api")
 }
